test/fail/M0238.mo
func test() {
  break;
};

func test2() {
  continue;
};

func test3() {
  label l { continue l };
};
